--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "angular": "~1.x",
-    "tinymce": "git@github.com:tinymce/tinymce-dist.git#4.0.28"
+    "tinymce": "^4.1.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.x"
