--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,7 @@
   ],
   "dependencies": {
     "angular": "~1.x",
-    "tinymce": "^4.1.2"
+    "tinymce": "git@github.com:tinymce/tinymce-dist.git#555fcfa1a09e93732a51950ba3d731050f31d39a"
   },
   "devDependencies": {
     "angular-mocks": "~1.x"
